--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GROQ_API_KEY = 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
+MONGO_URI=mongodb+srv://vinayakrana4444:aVgHOReMEYP07B33@hotelmanagement.avvvahu.mongodb.net/?retryWrites=true&w=majority&appName=HotelManagement
